--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -94,8 +94,8 @@
 			<p>В Південній Америці Outlander також був відомий як Montero Outlander, щоб зв'язати кросовер з лідером
 				продажів Mitsubishi Montero Sport.</p>
 		</div>
-		<img src="img/2003_Mitsubishi_Outlander_Sport_SE_Automatic_2.4_Rear(1).jpg"
-			alt="Mitsubishi Outlander 1 (2003—2006)" class="image">
+		<img src="img/2003_Mitsubishi_Outlander_Sport_SE_Automatic_2.4_Rear.jpg" alt="Mitsubishi Outlander 1 (2003—2006)"
+			class="image">
 		<h3 class="sub-title-mitsubishi" id="second-generation">Друге покоління (2006—2012)</h3>
 		<div class="text-mitsubishi">
 			<p>Друге покоління Аутлендер компанія Mitsubishi Motors представила в 2006 році. Машина була побудована на
