--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -49,19 +49,26 @@
 			</div>
 		</div>
 		<div class="jewellery">
-			<h2 class="sub-title-jewellery">WHAT WE DO</h2>
-			<h2 class="title-jewellery">We Develop Create Custom Jewels.</h2>
-			<div class="block-text-jewellery">
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-					alteration
-					in some form, by injected humour, or randomised words which don't look even slightly believable. If
-					you
-					are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing
-					hidden
-					in the middle of text</p>
+			<div class="container-jewellery">
+				<div class="block-jewellery">
+					<div class="jewellery-text">
+						<h3 class="sub-title-jewellery">WHAT WE DO</h3>
+						<h2 class="title-jewellery">We Develop Create Custom Jewels.</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+							alteration
+							in some form, by injected humour, or randomised words which don't look even slightly believable.
+							If
+							you
+							are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing
+							hidden
+							in the middle of text</p>
+					</div>
+					<div class="jewellery-image">
+						<img src="img/Rectangle.Jewellery.png" alt="#" class="image-jewellery">
+						<img src="img/Rectangle.Jewellery.2.png" alt="#" class="image-jewellery-2">
+					</div>
+				</div>
 			</div>
-			<img src="img/Rectangle.Jewellery.png" alt="#" class="image-jewellery">
-			<img src="img/Rectangle.Jewellery.2.png" alt="#" class="image-jewellery-2">
 		</div>
 
 	</main>
