--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -69,6 +69,21 @@
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class="content">
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum recusandae.
+				Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius et
+				libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
+				culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum recusandae.
+				Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius et
+				libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
+				culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum recusandae.
+				Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius et
+				libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
+				culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
 		</div>
 
 	</main>
