--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -70,20 +70,44 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="content">
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum recusandae.
-				Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius et
-				libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
-				culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum recusandae.
-				Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius et
-				libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
-				culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum recusandae.
-				Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius et
-				libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
-				culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
+		<div class="content-block">
+			<div class="content">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum
+					recusandae.
+					Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius
+					et
+					libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
+					culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum
+					recusandae.
+					Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius
+					et
+					libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
+					culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat inventore perspiciatis eum ipsum
+					recusandae.
+					Laboriosam rem labore natus voluptatem in quibusdam, veritatis explicabo vel similique, rerum dolore eius
+					et
+					libero magnam facilis. Hic cupiditate temporibus laboriosam eius exercitationem quod quidem, sint impedit
+					culpa voluptatibus, modi repudiandae ab et officia obcaecati?</p>
+			</div>
+			<div class="content-image">
+				<img src="img/content-img.jfif" alt="#">
+			</div>
+			<div class="content-text">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magni doloribus et nisi unde ex odit
+					hic
+					consectetur minus dolore, similique quisquam sed. Fuga, quae quas officia temporibus eum accusamus? Lorem
+					ipsum dolor sit amet consectetur adipisicing elit. Possimus magni doloribus et nisi unde ex odit hic
+					consectetur minus dolore, similique quisquam sed. Fuga, quae quas officia temporibus eum accusamus?</p>
+			</div>
+			<div class="example">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ab ullam nemo harum tenetur laboriosam
+					suscipit vero, animi recusandae est.</p>
+				<a href="#" class="link">Link</a>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ab ullam nemo harum tenetur laboriosam
+					suscipit vero, animi recusandae est.</p>
+			</div>
 		</div>
 
 	</main>
