--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -130,14 +130,37 @@
 							aliqua. Quis ipsum usendi laboris mollit</p>
 					</div>
 					<div class="jewellery-image">
-						<div class="picture01">
+						<div class="picture01 first-image">
 							<img src="img/Rectangle 5.png" alt="image">
 						</div>
-						<div class="picture02">
+						<div class="picture02 second-image">
 							<img src="img/Rectangle 4.png" alt="image">
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="practice">
+			<div class="block-practice">
+				DIV Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam assumenda esse perspiciatis expedita vel
+				nam totam quia adipisci, <a class="a-practice" href="#">officiis sed saepe blanditiis</a> a consectetur
+				reprehenderit odit iste, maxime veritatis ab. Aut reiciendis ea quae nesciunt, consequuntur error laudantium
+				nostrum expedita, vero
+				doloribus sequi magnam laboriosam quasi nisi beatae optio nam!
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime reiciendis voluptas debitis, sit
+					perspiciatis sapiente omnis voluptate suscipit facilis eum, sed ipsum numquam beatae ab voluptatum
+					exercitationem nobis perferendis sunt.</p>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime reiciendis voluptas debitis, sit
+					perspiciatis sapiente omnis voluptate suscipit facilis eum, sed ipsum numquam beatae ab voluptatum
+					exercitationem nobis perferendis sunt.</p>
+			</div>
+			<span class="span-practice">SPAN Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque tempora
+				numquam porro iusto saepe
+				fugiat deserunt, doloribus accusantium tenetur ratione non voluptatum voluptatem odio modi, quia fuga,
+				dolorum nam. Consequatur?</span>
+			<div class="-image-">
+				<img class="image-practice" src="img/bee-on-daisy.jpg" alt="image">
 			</div>
 		</div>
 	</main>
