--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -127,18 +127,50 @@
 						<div class="img-one-lower-cells"></div>
 						<h3 class="sub-title-project-conteiner">Financial Investment</h3>
 						<div class="date-project-conteiner">Sep 2022</div>
-						<div class="two-lower-cells">
-							<div class="img-two-lower-cells"></div>
-							<h3 class="sub-title-project-conteiner">Web Development</h3>
-							<div class="date-project-conteiner">Sep 2022</div>
-							<div class="tree-lower-cells">
-								<div class="img-tree-lower-cells"></div>
-								<h3 class="sub-title-project-conteiner">Financial Investments</h3>
-								<div class="date-project-conteiner">Sep 2022</div>
-							</div>
-						</div>
+					</div>
+					<div class="two-lower-cells">
+						<div class="img-two-lower-cells"></div>
+						<h3 class="sub-title-project-conteiner">Web Development</h3>
+						<div class="date-project-conteiner">Sep 2022</div>
+					</div>
+					<div class="tree-lower-cells">
+						<div class="img-tree-lower-cells"></div>
+						<h3 class="sub-title-project-conteiner">Financial Investments</h3>
+						<div class="date-project-conteiner">Sep 2022</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+
+		<div class="gradient">
+			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic eos delectus veniam omnis excepturi, dolor
+				ullam eaque molestiae eligendi voluptatum laboriosam, dolore sequi suscipit. Eveniet saepe maxime
+				architecto blanditiis minus laboriosam repellendus tempore unde. Cumque quas doloribus incidunt id velit,
+				saepe itaque nihil vitae excepturi, reprehenderit facilis amet. Alias, veritatis</p>
+		</div>
+		<span class="gradient-span">
+			Cumque quas doloribus incidunt id velit,
+			saepe itaque nihil vitae excepturi, reprehenderit facilis amet. Alias, veritatis
+		</span>
+		<div class="fon">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ex iste reiciendis sunt, voluptatibus nostrum
+			vitae laborum culpa dignissimos soluta distinctio veniam sint enim ducimus voluptatum saepe perferendis,
+			quidem libero consequatur, consequuntur cupiditate laudantium sit ut molestias! Eos iste amet provident?
+			Repudiandae vel sed quo iste optio doloribus aspernatur illum, expedita soluta quasi inventore ducimus
+			officiis nisi ratione magni recusandae quidem labore aliquam reprehenderit. Voluptas, laudantium cum numquam
+			quaerat nobis impedit necessitatibus suscipit accusamus dicta maiores odit minima accusantium nemo tempore
+			eveniet repellendus consequuntur. Dolores obcaecati reiciendis ea mollitia vel. Voluptate ab a dolorem quis
+			voluptas aliquam fuga nulla, nesciunt, qui maiores distinctio temporibus assumenda neque doloremque ipsum,
+			laborum sapiente. Eos, nihil. Delectus ut repellat impedit voluptas consequatur. Sequi, explicabo totam
+			ipsam optio eveniet odit! Molestiae quidem reprehenderit ipsa illo est iure nemo, possimus, natus voluptatem
+			perspiciatis aliquam quam molestias cum neque rerum iusto repudiandae labore qui ducimus enim exercitationem
+			maiores. Iusto, tenetur cupiditate. Voluptatibus nam minus id neque quia possimus exercitationem dolore
+			laborum odio labore voluptas quidem aspernatur minima vitae perspiciatis, sint earum esse obcaecati error
+			quibusdam velit. Repudiandae, sequi. Nisi perspiciatis suscipit illum nobis eum cumque consectetur
+			necessitatibus sunt ullam? Blanditiis magnam facere nihil, consectetur debitis ullam? Accusamus.
+		</div>
+
 	</main>
 	<footer></footer>
 </body>
